RESOLVED FIXED60892
REGRESSION(r83820): [Qt] Accelerated compositing no longer works in QGraphicsWebView
https://bugs.webkit.org/show_bug.cgi?id=60892
Summary REGRESSION(r83820): [Qt] Accelerated compositing no longer works in QGraphics...
Andreas Kling
Reported 2011-05-16 09:02:41 PDT
In r83820, an extra GraphicsLayer was added to the RenderLayerCompositor to contain all other layers, including the new scroll bar layers. The layer never gets a size set, since it's merely a container. This breaks PageClientQGraphicsWidget's assumption that the outermost layer should clip its children. This is already handled by the RenderLayerCompositor's "clip layer."
Attachments
Proposed patch (1.56 KB, patch)
2011-05-16 09:12 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2011-05-16 09:12:54 PDT
Created attachment 93651 [details] Proposed patch
Kenneth Rohde Christiansen
Comment 2 2011-05-16 09:46:08 PDT
Comment on attachment 93651 [details] Proposed patch Good find! :-)
Andreas Kling
Comment 3 2011-05-16 10:10:03 PDT
Comment on attachment 93651 [details] Proposed patch Clearing flags on attachment: 93651 Committed r86582: <http://trac.webkit.org/changeset/86582>
Andreas Kling
Comment 4 2011-05-16 10:10:11 PDT
All reviewed patches have been landed. Closing bug.
Antonio Gomes
Comment 5 2011-05-16 10:50:46 PDT
Is there a way to catch such regressions?
Ademar Reis
Comment 6 2011-05-16 14:05:00 PDT
Revision r86582 cherry-picked into qtwebkit-2.2 with commit 816a9ab <http://gitorious.org/webkit/qtwebkit/commit/816a9ab>
Note You need to log in before you can comment on or make changes to this bug.