third_party/WebKit/Source/WebKit/qt/WebCoreSupport/PageClientQt.cpp
@@ -290,7 +290,6 @@ void PageClientQGraphicsWidget::setRootGraphicsLayer(GraphicsLayer* layer)
     rootGraphicsLayer = layer ? layer->platformLayer() : 0;
 
     if (rootGraphicsLayer) {
-        rootGraphicsLayer.data()->setFlag(QGraphicsItem::ItemClipsChildrenToShape, true);
         rootGraphicsLayer.data()->setParentItem(view);
         rootGraphicsLayer.data()->setZValue(RootGraphicsLayerZValue);
     }
